--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "express": "^4.16.3",
         "jquery": "^3.3.1",
         "moment": "^2.22.1",
+        "pg-promise": "^8.4.3",
         "uuid": "^3.2.1",
         "yargs": "^11.0.0"
     },
